projeto mario bros

--- a/index.html
+++ b/index.html
@@ -117,10 +117,13 @@
             </li>
             <li>
                 <div class="container">
-                    <img src="image/configurador.png" alt="Clone da tela de login do instagram">
+                    <img src="image/SuperMarioRunTA.jpg" alt="projeto super mario">
+                     <p>Esse é um jogo inspirado no Super Mario desenvolvido 
+                        em HTML , CSS e Javascript
+                     </p>
                     <div class="btn_project">
-                     <a href="" class="btn_site">site</a>
-                     <a href="">código</a>
+                     <a href="https://wagnralvs.github.io/jogo-mario/" class="btn_site">site</a>
+                     <a href="https://github.com/Wagnralvs/jogo-mario">código</a>
                     </div>
                     
                 </div>
