--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
         <div class="description">
           <h3 class="title-h3">olá, tudo bem? </h3>
           <h2 class="title-h2">Desenvolvedor front-end</h2>
+       
+            <ul class="tec">
+              <li><i  style="color: red ;" class="fa-brands fa-angular" ></i></li>
+              <li><i style="color: yellow ;" class="fa-brands fa-js"></i></li>
+              <li><i style="color: red" class="fa-brands fa-html5"></i></li>
+              <li><i style="color: rgb(54, 54, 186) ;" class="fa-brands fa-css3-alt"></i></li>
+              <li><i style="color: rgb(129, 8, 180) ;" class="fa-brands fa-sass"></i></li>
+              <li><i style="color: rgb(129, 9, 204) ;" class="fa-brands fa-bootstrap"></i></li>
+              <li><i style="color: red ;" class="fa-brands fa-git"></i></li>
+              <li><i style="color: green ;" class="fa-brands fa-node-js"></i></li>
+              <li><i class="fa-brands jest"><img src="./image/icon_jest.jpg"></i></li>
+              <li><i class="fa-brands karma"><img src="./image/karma-icon.png"></i></li>
+            </ul>
+        
           <p>
             Sou apaixonado por programação e tecnologia, 
             sempre em processo de estudos de novas linguagem de programação, hoje desenvolvo em <strong>Angular 2+, HTML, CSS,
