site simulação finaceiro

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 <div class="container">
                     <img src="image/simulador.jpg" alt="simulador finaceiro">
                     <div class="btn_project">
-                      <a class="btn_site" href="https://wagnralvs.github.io/simular-empr-stimo/">site</a>
-                      <a>código</a>
+                      <a class="btn_site" href=" https://wagnralvs.github.io/Simulador-de-financiamento/">site</a>
+                      <a href="https://github.com/Wagnralvs/Simulador-de-financiamento/settings/pages">código</a>
                     </div>
                 </div>
             </li>
