adição projeto simulador

--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
         <ul aria-label="Navegação de projetos e websites">
             <li>
                 <div class="container">
+                    <h3>Simulador Financeiro</h3>
                     <img src="image/simulador.jpg" alt="simulador finaceiro">
+                    <p>Esse é um projeto de simulação financeira que avalia se o cliente tem 
+                        ou não aprovação para empréstimo, desenvolvido em <strong>Angular, Typescript, CSS, HTML</strong>
+                        e com o framework de estilização <strong>Bootstrap</strong>
+                    </p>
                     <div class="btn_project">
                       <a class="btn_site" href=" https://wagnralvs.github.io/Simulador-de-financiamento/">site</a>
                       <a href="https://github.com/Wagnralvs/Simulador-de-financiamento/settings/pages">código</a>
@@ -131,9 +136,10 @@
             </li>
             <li>
                 <div class="container">
+                    <h3>Jogo Mario</h3>
                     <img src="image/SuperMarioRunTA.jpg" alt="projeto super mario">
                      <p>Esse é um jogo inspirado no Super Mario desenvolvido 
-                        em HTML , CSS e Javascript
+                        em <strong>HTML , CSS e Javascript</strong> 
                      </p>
                     <div class="btn_project">
                      <a href="https://wagnralvs.github.io/jogo-mario/" class="btn_site">site</a>
