--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <body class="body">
-    <header class="header" id="home">
+    <header class="header" >
         <h1>Dev <span>&lt Wagner /&gt</span></h1>
         <nav >
             <ul class="navigation">
@@ -25,7 +25,7 @@
         </nav>
       
     </header>
-    <section class="section">
+    <section class="section" id="home">
         <div class="description">
           <h3 class="title-h3">olá, tudo bem? </h3>
           <h2 class="title-h2">Desenvolvedor front-end</h2>
