Update projeto pokedex

--- a/index.html
+++ b/index.html
@@ -148,6 +148,20 @@
                     
                 </div>
             </li>
+                <li>
+                <div class="container">
+                    <h3>Pokedex</h3>
+                    <img src="image/pokemons.jpg" alt="projeto pokedex">
+                     <p>Esse é um pokedex de Pokemon consumindo uma API pública, desenvolvido 
+                        em <strong>HTML , CSS e Javascript</strong> 
+                     </p>
+                    <div class="btn_project">
+                     <a href="https://wagnralvs.github.io/pokedex/" class="btn_site">site</a>
+                     <a href="https://github.com/Wagnralvs/pokedex">código</a>
+                    </div>
+                    
+                </div>
+            </li>
         </ul>
     </div>
     <!-- <div class="more_project">
