--- a/index.html
+++ b/index.html
@@ -162,6 +162,20 @@
                     
                 </div>
             </li>
+             <li>
+                <div class="container">
+                    <h3>Sobrevivência Zumbi</h3>
+                    <img src="image/zumbi.jpeg" alt="projeto quiz sobrevivência zumbi">
+                     <p>Esse é um quiz de perguntas sobre "o que você faria em um apocalipse zumbi?", desenvolvido 
+                        em <strong>HTML , CSS e Javascript</strong> 
+                     </p>
+                    <div class="btn_project">
+                     <a href="https://wagnralvs.github.io/sobrevivencia_zumbi/" class="btn_site">site</a>
+                     <a href="https://github.com/Wagnralvs/sobrevivencia_zumbi">código</a>
+                    </div>
+                    
+                </div>
+            </li>
         </ul>
     </div>
     <!-- <div class="more_project">
