atualização CV e descrição apresentação

--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
             </ul>
         
           <p>
-            Sou apaixonado por programação e tecnologia, 
-            sempre em processo de estudos de novas linguagem de programação, hoje desenvolvo em <strong>Angular 2+, HTML, CSS,
-            Typescript, Javascript, Node, Git, </strong>
-            conhecimento e experiência em 
-            CRUD, API rest,  testes unitários, Jest, Karma, service, Kanbum e Scrum
-            e atuação com frameworks  de estilização como bootstrap, voxel e angular material.
+            Sou apaixonado por programação e tecnologia, com 3 anos de experiência, atuando com <strong>Angular 2+, HTML5, CSS, SCSS
+            Typescript, Javascript, </strong>
+            conhecimento e experiência em <strong>
+                Micro front-end (MFF), arquitetura front-end,  
+                CRUD, API REST, testes unitários, Jest, Karma, service, Node, Git
+            </strong>
+            e atuação com frameworks  de estilização como bootstrap, voxel e angular material e também trabalhando com algumas metodologias ágies como TDD, Kanbum e Scrum.
           </p>
-        <a  href="cv/CV-Wagner_2023.pdf" download class="download" >Dowload CV</a>
+        <a  href="cv/CV-Wagner.pdf" download class="download" >Dowload CV</a>
         
        </div>
      <div class="image" >
@@ -84,10 +85,9 @@
                     parte de desenvolvimento 💻,gosto de quadrinhos 🦸‍♂️, 
                     esportes 🏃‍♂️, música 🎵 e filmes 🎬.
                     <br>
-                    Sou formado em Processos gerenciais e Administração, 
-                    porém minha paixão mesmo é no código, com mais de 2 anos de experiência
+                    Estou cursando Pós em Análise e desenvolvimento de sistemas,
                     desenvolvendo com as principais tecnologias de front-end,  
-                    trabalhando como desenvolvedor na criação , manutenção, correção de código e em cobertura de testes de unitários.
+                    trabalhando como arquitetura, desenvolvimento, manutenção, correção de código e em cobertura de testes de unitários.
                     <br>
                     <strong>Você está precisando de um desenvolvedor ?
                         <br>
