--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
             </ul>
         
           <p>
-            Sou apaixonado por programação e tecnologia, com 3 anos de experiência, atuando com <strong>Angular 2+, HTML5, CSS, SCSS
+            Tenho uma paixão genuína por tecnologia, tenho pós-graduação em 
+            <stron>Análise e Desenvolvimento de Sistemas</stron> e <strong>Desenvolvimento de Aplicações Mobile</strong> .
+            Possuo uma sólida experiência de aproximadamente 5 anos no desenvolvimento de software. Atuando com
+            <strong>Angular 2+, HTML5, CSS, SCSS
             Typescript, Javascript, </strong>
             conhecimento e experiência em <strong>
-                Micro front-end (MFF), arquitetura front-end,  
+                Micro front-end (MFF), LIB's e arquitetura front-end,  
                 CRUD, API REST, testes unitários, Jest, Karma, service, Node, Git
             </strong>
             e atuação com frameworks  de estilização como bootstrap, voxel e angular material e também trabalhando com algumas metodologias ágies como TDD, Kanbum e Scrum.
@@ -80,12 +83,12 @@
             <div class="description">
                 <h1>Olá sou desenvolvedor - Wagner</h1>
                 <p><p>E aí, tudo bem? 😁</p>
-                    Primeiro vou contar um pouco sobre mim, tenho 24 anos,
+                    Primeiro vou contar um pouco sobre mim, tenho 26 anos,
                     resido em São Paulo Capital, sempre gostei da 
                     parte de desenvolvimento 💻,gosto de quadrinhos 🦸‍♂️, 
                     esportes 🏃‍♂️, música 🎵 e filmes 🎬.
                     <br>
-                    Estou cursando Pós em Análise e desenvolvimento de sistemas,
+                    Sou formado Pós em Análise e desenvolvimento de sistemas e Desenvolvimento de Aplicações Mobile,
                     desenvolvendo com as principais tecnologias de front-end,  
                     trabalhando como arquitetura, desenvolvimento, manutenção, correção de código e em cobertura de testes de unitários.
                     <br>
