adição porjeto de listagem CRUD

--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
         <ul aria-label="Navegação de projetos e websites">
             <li>
                 <div class="container">
+                    <h3>Listagem CRUD</h3>
+                    <img src="image/crud-angular.png" alt="Listagem CRUD">
+                    <p>Aplicação web desenvolvida em Angular com foco na listagem, criação, edição, remoção e visualização de registros (CRUD completo).
+                         O sistema apresenta uma interface responsiva utilizando <strong>Bootstrap</strong>, 
+                         com uma tabela dinâmica que permite filtragem em tempo real, paginação e ordenação dos dados. 
+                    </p>
+                    <div class="btn_project">
+                      <a target="_blank" class="btn_site" href=" https://wagnralvs.github.io/ListagemCRUD/">site</a>
+                      <a target="_blank" href="https://github.com/Wagnralvs/ListagemCRUD">código</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="container">
                     <h3>Simulador Financeiro</h3>
                     <img src="image/simulador.jpg" alt="simulador finaceiro">
                     <p>Esse é um projeto de simulação financeira que avalia se o cliente tem 
@@ -133,7 +147,7 @@
                     </p>
                     <div class="btn_project">
                       <a target="_blank" class="btn_site" href=" https://wagnralvs.github.io/Simulador-de-financiamento/">site</a>
-                      <a target="_blank" href="https://github.com/Wagnralvs/Simulador-de-financiamento/settings/pages">código</a>
+                      <a target="_blank" href="https://github.com/Wagnralvs/Simulador-de-financiamento">código</a>
                     </div>
                 </div>
             </li>
